--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "next": "12.2.4",
+    "node-json-db": "^2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
